- Implement REDUX into project - Add custom alert system with redux

--- a/src/static/config.json
+++ b/src/static/config.json
@@ -8,5 +8,6 @@
     "base"        : "",
     "categories"  : "/fee-assessment-categories",
     "books"       : "/fee-assessment-books"
-  }
+  },
+  "alert_show_ms" : 3000
 }
